- Decreased initialization time with some reflection optimizations.
- Added Lines helper to [InspectorTextArea].
- Experimental multi-object editing. There are major known issues.
- Added fiSettings.EnableGlobalOrdering to make [InspectorOrder] global.
- [InspectorTooltip] can now be added to a class. The tooltip will be shown on the "Name" property that every inspector starts with.

Changes:
- Don't auto-serialize prefabs while playing.
- Better logic to destroy old fiBackupSceneStorage instances that have been corrupted.
- The serializer manager will no longer automatically show itself.
- fiInspectorOnly for ScriptableObjects is now a fallback editor.
- Fixed issue where adding more than 20 items to a dictionary caused an exception.

Fixes:
- Fixed property drawer integration reallocating drawer instance.
- Fixed metadata not properly getting updated for collection property editors.
- Fixed Full Serializer exception being thrown for Window Store non-il2cpp builds.
- Fixed existing prefab instance members being overriden when changing a MonoBehaviour type to a BaseBehavior type.
- Fixed occasional null deref from OnSceneGUI.


For v2.6.3

New:
- InspectorCategory now works at a class level. You can use this behavior to set the default category for items without an [InspectorCategory] annotation.
- Added new option, fiSettings.DisplaySingleCategory, which hides the category UI if there is only one category (off by default).
- Added new option to disable internal logging.
- [internal]: Reworked serialization to support new Unity 5.4 restrictions. Everything should continue to "just work".
- Object reference fields now display the type of component they are referencing.

Changes:
- The char editor now mirrors Unity's default behavior.
- Adding a derived-type which extends Component no longer implicity adds an instance of that Component to the GameObject.
- [InspectorSkipInheritance] will now also skip inheritance for null objects.
- Added support for Stack<T>.